--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -47,7 +47,8 @@ jobs:
         uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
         id: plan-output
         with:
-          plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
+          plan: ${{ steps.plan-run.outputs.plan_id }}
+        #  plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
 ## ...
 ## ...
       - name: Update PR
