--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -43,6 +43,10 @@ jobs:
           plan_only: true
 ## ...
 ## ...
+      - name: Run Terraform Plan
+        run: terraform plan -out=plan.out
+      - name: Show Terraform Plan Output
+        run: terraform show plan.out  
       - name: Get Plan Output
         uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
         id: plan-output
