--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -44,12 +44,6 @@ jobs:
 ## ...
 ## ...
       # Debug: Log the plan_id to verify it's correct
-      - name: Debug Plan Output (Detailed)
-        run: |
-          echo "Plan ID: ${{ steps.plan-run.outputs.plan_id }}"
-          echo "Plan Output: ${{ steps.plan-run.outputs }}"
-          curl -H "Authorization: Bearer ${{ secrets.TF_API_TOKEN }}" \ 
-                "https://app.terraform.io/api/v2/runs/${{ steps.plan-run.outputs.plan_id }}/actions"
 
       - name: Get Plan Output
         uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
@@ -57,6 +51,10 @@ jobs:
         with:
           plan: ${{ steps.plan-run.outputs.plan_id }}
         #  plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
+        
+      - name: Output Plan Results
+        run: |
+          echo "Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy."
 ## ...
 ## ...
       - name: Update PR
