--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -52,6 +52,10 @@ jobs:
           plan: ${{ steps.plan-run.outputs.plan_id }}
         #  plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
         
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: '1.10.5'  # You can specify the version you need here        
       - name: Display Terraform Plan
         run: |
           echo "Fetching full plan output..."
