Use our HCP Terraform organization

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -45,12 +45,17 @@ jobs:
 ## ...
       # Debug: Log the plan_id to verify it's correct
 
-      - name: Get Plan Output
-        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.3.2
+      - uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.3.2
         id: plan-output
         with:
-          plan: ${{ steps.plan-run.outputs.plan_id }}
-        #  plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
+          plan: ${{ steps.run.outputs.plan_id }}
+
+      - name: Reference Plan Output
+        run: |
+          echo "Plan status: ${{ steps.plan-output.outputs.plan_status }}"
+          echo "Resources to Add: ${{ steps.plan-output.outputs.add }}"
+          echo "Resources to Change: ${{ steps.plan-output.outputs.change }}"
+          echo "Resources to Destroy: ${{ steps.plan-output.outputs.destroy }}"
         
     
 
@@ -72,13 +77,6 @@ jobs:
               return comment.user.type === 'Bot' && comment.body.includes('HCP Terraform Plan Output')
             });
             // Debugging outputs
-            console.log(steps.plan-output.outputs);  // Log outputs to verify their presence
-
-            // Use safe fallback values in case any output is missing
-            const add = steps.plan-output.outputs.add || '0';
-            const change = steps.plan-output.outputs.change || '0';
-            const destroy = steps.plan-output.outputs.destroy || '0';
-            const output = `#### HCP Terraform Plan Output
                 \`\`\`
                 Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.
                 \`\`\`
