--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -38,6 +38,14 @@ jobs:
         with:
           workspace: ${{ env.TF_WORKSPACE }}
           configuration_version: ${{ steps.upload.outputs.configuration_version_id }}
+          
+      - name:  Show run 
+        uses: hashicorp/tfc-workflows-github/actions/show-run@v1.3.2
+        id: run
+        with:
+          run: ${{ steps.reference-run-id.outputs.run_id }}
+          run: |
+          echo "Latest Run Status: ${{ steps.run.outputs.run_status }}"     
 
       - name: show output
         uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.3.2
