--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -39,13 +39,12 @@ jobs:
           workspace: ${{ env.TF_WORKSPACE }}
           configuration_version: ${{ steps.upload.outputs.configuration_version_id }}
           
-      - name:  Show run 
-        uses: hashicorp/tfc-workflows-github/actions/show-run@v1.3.2
-        id: run
+      - name: Get Plan Output
+        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
+        id: plan-output
         with:
-          run: ${{ steps.reference-run-id.outputs.run_id }}
-      - run: |
-          echo "Latest Run Status: ${{ steps.run.outputs.run_status }}"     
+         # plan: ${{ steps.plan-run.outputs.plan_id }}
+          plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}          
 
       - name: show output
         uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.3.2
