--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -22,6 +22,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        
+      - name: Initialize Terraform
+        run: terraform init
+
+      - name: Refresh Terraform State
+        run: terraform refresh
 ## ...
 
 ## ...
